# knitter

./: .gitignore  Cargo.toml  ReadMe.md  build.rs  configs.toml  init_db.ps1
bench/: ghz_bench_emit_event.json  ghz_bench_listen_event.json  readme.md
defines/: 10021_libraries.toml  10022_assets.toml  10023_sets.toml  10024_projects.toml  10025_sequences.toml  10026_cuts.toml  10027_epics.toml
documents/: 树知功能分析.drawio  概念.md
documents/类图/: 资产.puml
documents/过程图/工程/: 创建工程过程.puml
documents/过程图/引用/: 建立引用过程.puml
locales/: en.yml  zh.yml
manage_defines/: 200011_set_collections.toml  20001_projects.toml  20002_asset_collections.toml  20002_libraries.toml  20003_assets.toml  20004_sets.toml  20005_sequences.toml  20006_cuts.toml  20007_epics.toml  20008_assemblies.toml  20009_specses.toml  20010_prefabs.toml  20011_set_collections.toml  40021_libraries.toml  40022_assets.toml  40023_sets.toml  40024_projects.toml  40025_sequences.toml  40026_cuts.toml  40027_epics.toml
protocols/: account.proto  assembly.proto  asset.proto  asset_collection.proto  cashmere.proto  cut.proto  data.proto  data_assembly.proto  entity.proto  epic.proto  event.proto  knitter.proto  library.proto  manage.proto  person.proto  prefab.proto  project.proto  readme.md  reference.proto  results.proto  sequence.proto  set.proto  set_collection.proto  specs.proto  task.proto  view.proto  work.proto  work_node.proto  work_phase.proto
scripts/: init_db.ps1  prepare_develop_repos.ps1
src/: io.knitter.rs  lib.rs  main.rs
src/ids_codes/: field_ids.rs  manage_ids.rs  mod.rs
src/managers/: assemblies_manager.rs  asset_collections_manager.rs  assets_manager.rs  cuts_manager.rs  epics_manager.rs  libraries_manager.rs  mod.rs  prefabs_manager.rs  projects_manager.rs  sequences_manager.rs  set_collections_manager.rs  sets_manager.rs  specses_manager.rs
src/protocol/: io.knitter.rs  mod.rs
src/server/: account_service.rs  account_service_handle.rs  cashmere.rs  entity_service_handle.rs  event_service_handle.rs  graph_service_handle.rs  init.rs  io.knitter.rs  lib.rs  manage_service_handle.rs  mod.rs  point_service_handle.rs  roadmap_service_handle.rs  task_service_handle.rs  view_service_handle.rs  work_node_service_handle.rs  work_phase_service_handle.rs  work_service_handle.rs
src/services/: init.rs  io.knitter.rs  mod.rs
src/services/assembly_servcice_handle/: handle_new_assembly.rs  mod.rs
src/services/assembly_servcice_handles/: handle_new_assembly.rs  handle_reference_assemblies.rs  mod.rs
src/services/asset_collection_servcice_handle/: handle_new_asset_collection.rs  mod.rs
src/services/asset_collection_servcice_handles/: handle_get_asset_collection_assembly_total_count.rs  handle_get_asset_collection_assemlies_page.rs  handle_get_asset_collection_asset_total_count.rs  handle_get_asset_collection_assets_page.rs  handle_new_asset_collection.rs  mod.rs
src/services/assets_servcice_handle/: handle_new_asset.rs  mod.rs
src/services/assets_servcice_handles/: handle_get_referenced_assets.rs  handle_new_asset.rs  handle_reference_assets.rs  mod.rs
src/services/cut_servcice_handle/: handle_new_cut.rs
src/services/cut_servcice_handles/: handle_new_cut.rs  mod.rs
src/services/epic_servcice_handle/: handle_new_epic.rs  mod.rs
src/services/epic_servcice_handles/: handle_get_epic_sequences.rs  handle_new_epic.rs  mod.rs
src/services/library_servcice_handle/: handle_new_library.rs  mod.rs
src/services/prefab_service_handle/: mod.rs
src/services/prefab_service_handles/: handle_new_prefab.rs
src/services/prefabs_service_handle/: handle_new_prefab.rs
src/services/project_servcice_handle/: handle_associate_asset_collections_to_project.rs  handle_associate_libraries_to_project.rs  handle_associate_set_collections_to_project.rs  handle_get_project_associated_sets.rs  handle_new_project.rs  mod.rs
src/services/project_servcice_handles/: handle_associate_asset_collections_to_project.rs  handle_associate_set_collections_to_project.rs  handle_change_project_status.rs  handle_deassociate_asset_collections_from_project.rs  handle_deassociate_set_collections_from_project.rs  handle_get_project_associated_set_collection.rs  (+4 more)
(+24 files in other folders)
