[package]
name = "knitter"
version = "0.1.0"
authors = ["闫刚 <yes7rose@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = {path="../cashmere_core/cash_core"}
account = { path = "../cashmere_core/account" }
auth = { path = "../cashmere_core/auth" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }
managers = { path = "../cashmere_core/managers" }
entity = { path = "../cashmere_core/entity" }
runtime_handle = { path = "../cashmere_core/runtime_handle" }

chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "0.2.23", features = ["full"] }
tonic = { version = "0.3.1", features = ["tls"] }
prost = "0.6.0"
bson = "1.1.0"


# logging
log = "0.4"
simplelog = "0.8"

clap = "3.0.0-beta.2"

[build-dependencies]
tonic-build = "0.3"