[package]
name = "knitter_comunication"
version = "0.3.0"
authors = ["闫刚 <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = { path = "../cashmere_core/cash_core" }
cash_result = { path = "../cashmere_core/cash_result" }
auth = { path = "../cashmere_core/auth" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }
managers = { path = "../cashmere_core/managers" }
entity = { path = "../cashmere_core/entity" }
runtime_handle = { path = "../cashmere_core/runtime_handle" }
service_common_handles = { path = "../cashmere_core/service_common_handles" }
view = { path = "../cashmere_core/view" }
manage_define = { path = "../cashmere_core/manage_define" }
server_utils = { path = "../cashmere_core/server_utils" }
service_utils = { path = "../cashmere_core/service_utils" }

account_module = { path = "../account_module" }
knitter_module = { path = "../knitter_module" }
event_module = { path = "../event_module" }
data_module = { path = "../data_module" }

dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tokio",
  "tonic",
  "tower",
  "prost",
  "bson",
  "serde",
  "serde_derive",
  "log",
  "simplelog",
  "rust-i18n",
  "once_cell",
] }

tonic = { version = "0.9.2", features = ["tls", "gzip"] }
prost = "0.11"
serde = "1.0.131"
serde_derive = "1.0.131"

[build-dependencies]
dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tonic-build",
] } 
manage_define = { path = "../cashmere_core/manage_define" }

[features]
view_rules_validate = []